--- a/TewCloud/Scripts/AngularJS/app/templates/home.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/home.html
@@ -11,10 +11,10 @@
                 {{userName}}
             </span>
             <br />
-            <span><a (click)="logOff()">Log out</a></span>
+            <span><a class="mobile-home-link" (click)="logOff()">Log out</a></span>
         </span>
     </div>
-    <div class="learning-main-background">
+    <div class="mobile-links">
         <a class="mobile-home-link" routerLink="/add-word">Add word</a>
         <br/>
 
