--- a/TewCloud/Views/Shared/_LearningLayout.cshtml
+++ b/TewCloud/Views/Shared/_LearningLayout.cshtml
@@ -14,7 +14,7 @@
 
         @RenderSection("scripts", required: false)
     </head>
-    <body>
+    <body class="document-body">
          @RenderBody()
     </body>
 </html>
