--- a/TewCloud/Scripts/AngularJS/app/templates/app.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/app.html
@@ -1,4 +1,4 @@
-﻿<div class="row">
+﻿<div class="row learning-body">
     <div *ngIf="userName">
 
         <!-- desctop -->
@@ -33,7 +33,7 @@
 
         <!-- mobile -->
         <div class="visible-phone visible-tablet" >
-            <a class="btn btn-info mobile-home-button" routerLink="/home">
+            <a class="btn btn-orange mobile-home-button" routerLink="/home">
                 <span class="glyphicon glyphicon-align-justify"></span>
             </a>
         </div>
