--- a/TewCloud/Content/Learning.css
+++ b/TewCloud/Content/Learning.css
@@ -119,8 +119,8 @@
 }
 
 .menu-header-user-name {
-    /*text-align: right;*/
     font-size: 16px;
+    word-wrap: break-word;
 }
 
 .log-out-link {
@@ -193,7 +193,7 @@
 }
 
 .document-body {
-    background-color: rgba(128,128,128,0.10);
+    background-color: rgba(128,128,128,0.05);
 }
 
 .mobile-links {
