--- a/WebSite/Content/Tew.css
+++ b/WebSite/Content/Tew.css
@@ -209,3 +209,34 @@
     error - #fd6c01
     hover - #ffa500
 */
+
+/**************************** TEW NEXT ********************************************/
+
+.tew-body {
+	margin-top: 55px;
+}
+
+.responsive-menu {
+	margin-left: 5px;
+	margin-right: 5px;
+}
+
+.responsive-menu-button {
+	margin-right: 20px;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+	font-size: 18px;
+	color: #d1cdcd;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus {
+  color: #fff;
+  font-size: 20px;
+}
+
+.active-menu-item {
+	font-size: 20px;
+	color: red !important;
+}
