--- a/WebSite/Views/Shared/_TewLayout.cshtml
+++ b/WebSite/Views/Shared/_TewLayout.cshtml
@@ -4,7 +4,7 @@
     <head>
         <meta name="viewport" content="width=device-width"/>
         <meta charset="utf-8" />
-        <title>Learning</title>
+        <title>Tew</title>
 
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
