loading animation. added NEXT pages

--- a/WebSite/StaticContent/app/templates/addWordNext.html
+++ b/WebSite/StaticContent/app/templates/addWordNext.html
@@ -66,9 +66,9 @@
                         </div>
                     </div>
                     <br/>
-                    <input type="submit" class="btn btn-success xs-visible" [disabled]="!addWordform.valid" value="Add word2"/>
                 </div>
             </div>
+            <input type="submit" class="btn btn-success xs-visible center-block" [disabled]="!addWordform.valid" value="Add word"/>
         </div>
     </form>
 </div>
