--- a/WebSite/Content/Tew.css
+++ b/WebSite/Content/Tew.css
@@ -33,10 +33,6 @@
     color: #737272;
 }
 
-.cursor-pointer {
-    cursor: pointer;
-}
-
 .list-item-error {
     background-color: #ffa500;
     color: white !important;
@@ -245,20 +241,20 @@ active item > color: black
 }
 
 .xs-visible {
-    display: none;
+    visibility: hidden;
 }
 
 .xs-hidden {
-    display: inline;
+    visibility: visible;
 }
 
 @media (max-width: 768px) {
     .xs-visible {
-	    display: inline;
+	    visibility: visible;
     }
 
     .xs-hidden {
-        display: none;
+        visibility: hidden;
     }
 }
 
@@ -282,4 +278,8 @@ active item > color: black
 .active-list-item {
     background-color: #737272;
     color: black;
+}
+
+.cursor-pointer {
+    cursor: pointer;
 }
