--- a/WebSite/StaticContent/app/templates/helpComponents/progressBar.html
+++ b/WebSite/StaticContent/app/templates/helpComponents/progressBar.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="progress-bar progress-bar-primary progress-bar-striped progress-bar active"
+    <div class="progress-bar progress-bar-success progress-bar-striped progress-bar active"
         [style.width]="currentProgress + '%'">
         {{currentProgress}}%
     </div>
