--- a/WebSite/StaticContent/app/templates/pickerTestNext.html
+++ b/WebSite/StaticContent/app/templates/pickerTestNext.html
@@ -10,7 +10,7 @@
         </button>
     </div>
 
-    <div class="row center-block">
+    <div class="row center-block margin-20">
         <progress-bar [progress]="progress"></progress-bar>
     </div>
 
@@ -52,7 +52,7 @@
         <div class="col-lg-5 col-md-5 col-sm-4 picker-test-message">
             <div [hidden]="!resultMessage">
                 <div>{{resultMessage}}</div>
-                <button class="btn btn-warning" (click)="setNextTest()">Next</button>
+                <button class="btn btn-success" (click)="setNextTest()">Next</button>
             </div>
         </div>
     </div>
