--- a/WebSite/StaticContent/app/templates/addWordNext.html
+++ b/WebSite/StaticContent/app/templates/addWordNext.html
@@ -18,7 +18,7 @@
                         <input [formControl]="addWordform.controls['english']" type="text" class="form-control" (keyup.enter)="translate()"/>
                         <span class="input-group-btn" style="width:0;">
                             <button class="btn btn-default"  type="button" (click)="translate()">
-                                <span class="glyphicon glyphicon-search"></span>
+                                <i class="fa fa-search" aria-hidden="true"></i>
                             </button>
                         </span>		
                     </div>
